--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@chakra-ui/icons": "^2.1.1",
     "@chakra-ui/react": "^2.8.2",
+    "@clerk/nextjs": "^5.2.6",
     "@emotion/react": "^11.13.0",
     "@emotion/styled": "^11.13.0",
     "@fortawesome/fontawesome-svg-core": "^6.6.0",
@@ -20,6 +21,7 @@
     "@supabase/ssr": "^0.4.0",
     "@supabase/supabase-js": "^2.44.4",
     "aos": "^2.3.4",
+    "axios": "^1.7.2",
     "clsx": "^2.1.1",
     "firebase": "^10.12.4",
     "framer-motion": "^11.3.8",
@@ -35,7 +37,8 @@
     "react-hot-toast": "^2.4.1",
     "react-icons": "^5.2.1",
     "react-merge-refs": "^2.1.1",
-    "react-redux": "^9.1.2"
+    "react-redux": "^9.1.2",
+    "svix": "^1.25.0"
   },
   "devDependencies": {
     "@types/aos": "^3.0.7",
